--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_API_PRODUCTION_BASE_URL=http://apiuat.spacekom.com/api
+VUE_APP_API_PRODUCTION_BASE_URL=http://gulf-api.oceansms.io/api
 VUE_APP_API_DEVELOPMENT_BASE_URL=http://127.0.0.1:8000/api
