--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-animate-onscroll": "^1.0.8",
     "vue-json-excel": "^0.3.0",
     "vue-router": "^3.5.1",
+    "vue2-datepicker": "^3.11.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3"
