Feature: get activities

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_API_PRODUCTION_BASE_URL=https://gulf-api.oceansms.io/api
+VUE_APP_API_PRODUCTION_BASE_URL=https://gulf-2-api.oceansms.io/api
 VUE_APP_API_DEVELOPMENT_BASE_URL=http://127.0.0.1:8000/api
